@@ -86,15 +86,19 @@ public class NettyWorkerClient<I extends WritableComparable,
   private final int maxMutationsPerPartition;
   /** Messages sent during the last superstep */
   private long totalMsgsSentInSuperstep = 0;
+  /** Server data from the server */
+  private final ServerData<I, V, E, M> serverData;
 
   /**
    * Only constructor.
    *
    * @param context Context from mapper
    * @param service Used to get partition mapping
+   * @param serverData Server data (used for local requests)
    */
   public NettyWorkerClient(Mapper<?, ?, ?, ?>.Context context,
-                           CentralizedServiceWorker<I, V, E, M> service) {
+                           CentralizedServiceWorker<I, V, E, M> service,
+                           ServerData<I, V, E, M> serverData) {
     this.nettyClient = new NettyClient<I, V, E, M>(context);
     this.conf = context.getConfiguration();
     this.service = service;
@@ -104,6 +108,7 @@ public class NettyWorkerClient<I extends WritableComparable,
         GiraphJob.MAX_MUTATIONS_PER_REQUEST_DEFAULT);
     sendMessageCache = new SendMessageCache<I, M>(conf);
     sendMutationsCache = new SendMutationsCache<I, V, E, M>();
+    this.serverData = serverData;
   }
 
   @Override
@@ -167,6 +172,23 @@ public class NettyWorkerClient<I extends WritableComparable,
         partitionOwner.getPartitionId());
   }
 
+  /**
+   * When doing the request, short circuit if it is local
+   *
+   * @param remoteServerAddress Remote server address (checked against local)
+   * @param writableRequest Request to either submit or run locally
+   */
+  private void doRequest(InetSocketAddress remoteServerAddress,
+                         WritableRequest<I, V, E, M> writableRequest) {
+    // If this is local, execute locally
+    if (service.getWorkerInfo().getHostnamePort().equals(
+        remoteServerAddress)) {
+      writableRequest.doRequest(serverData);
+    } else {
+      nettyClient.sendWritableRequest(remoteServerAddress, writableRequest);
+    }
+  }
+
   @Override
   public void sendMessageRequest(I destVertexId, M message) {
     PartitionOwner partitionOwner =
@@ -191,7 +213,7 @@ public class NettyWorkerClient<I extends WritableComparable,
       WritableRequest<I, V, E, M> writableRequest =
           new SendPartitionMessagesRequest<I, V, E, M>(
               partitionId, partitionMessages);
-      nettyClient.sendWritableRequest(remoteServerAddress, writableRequest);
+      doRequest(remoteServerAddress, writableRequest);
     }
   }
 
@@ -209,7 +231,7 @@ public class NettyWorkerClient<I extends WritableComparable,
     WritableRequest<I, V, E, M> vertexRequest =
         new SendVertexRequest<I, V, E, M>(partitionId,
             partition.getVertices());
-    nettyClient.sendWritableRequest(remoteServerAddress, vertexRequest);
+    doRequest(remoteServerAddress, vertexRequest);
 
     // messages are stored separately
     MessageStoreByPartition<I, M> messageStore =
@@ -229,7 +251,7 @@ public class NettyWorkerClient<I extends WritableComparable,
       if (messagesInMap > maxMessagesPerPartition) {
         WritableRequest<I, V, E, M> messagesRequest = new
             SendPartitionCurrentMessagesRequest<I, V, E, M>(partitionId, map);
-        nettyClient.sendWritableRequest(remoteServerAddress, messagesRequest);
+        doRequest(remoteServerAddress, messagesRequest);
         map.clear();
         messagesInMap = 0;
       }
@@ -237,18 +259,18 @@ public class NettyWorkerClient<I extends WritableComparable,
     if (!map.isEmpty()) {
       WritableRequest<I, V, E, M> messagesRequest = new
           SendPartitionCurrentMessagesRequest<I, V, E, M>(partitionId, map);
-      nettyClient.sendWritableRequest(remoteServerAddress, messagesRequest);
+      doRequest(remoteServerAddress, messagesRequest);
     }
   }
 
-  /**
-   * Send a mutations request if the maximum number of mutations per partition
-   * was met.
-   *
-   * @param partitionId Partition id
-   * @param partitionOwner Owner of the partition
-   * @param partitionMutationCount Number of mutations for this partition
-   */
+    /**
+    * Send a mutations request if the maximum number of mutations per partition
+    * was met.
+    *
+    * @param partitionId Partition id
+    * @param partitionOwner Owner of the partition
+    * @param partitionMutationCount Number of mutations for this partition
+    */
   private void sendMutationsRequestIfFull(
       int partitionId, PartitionOwner partitionOwner,
       int partitionMutationCount) {
@@ -261,7 +283,7 @@ public class NettyWorkerClient<I extends WritableComparable,
       WritableRequest<I, V, E, M> writableRequest =
           new SendPartitionMutationsRequest<I, V, E, M>(
               partitionId, partitionMutations);
-      nettyClient.sendWritableRequest(remoteServerAddress, writableRequest);
+      doRequest(remoteServerAddress, writableRequest);
     }
   }
 
@@ -352,7 +374,7 @@ public class NettyWorkerClient<I extends WritableComparable,
               entry.getKey(), entry.getValue());
       InetSocketAddress remoteServerAddress =
           getInetSocketAddress(entry.getValue().keySet().iterator().next());
-      nettyClient.sendWritableRequest(remoteServerAddress, writableRequest);
+      doRequest(remoteServerAddress, writableRequest);
     }
 
     // Execute the remaining sends mutations (if any)
@@ -365,7 +387,7 @@ public class NettyWorkerClient<I extends WritableComparable,
               entry.getKey(), entry.getValue());
       InetSocketAddress remoteServerAddress =
           getInetSocketAddress(entry.getValue().keySet().iterator().next());
-      nettyClient.sendWritableRequest(remoteServerAddress, writableRequest);
+      doRequest(remoteServerAddress, writableRequest);
     }
 
     nettyClient.waitAllRequests();
